Update and rename Desenvolvimento 2 #101879.md to 2.0.Desenvolvimento 2 #101879.md

--- a/2.0.Desenvolvimento 2 #101879.md
+++ b/2.0.Desenvolvimento 2 #101879.md
@@ -1,4 +1,9 @@
-Exercício:
+Instruções do projeto 2
+
+A banda de Miguel te contratou para ajudá-los na criação de uma instância EC2 para organizar a documentação e os arquivos importantes da banda. Recentemente, a banda se interessou pelo mundo da computação em nuvem e decidiu explorar o Amazon EC2, um serviço popular de infraestrutura como serviço (IaaS) oferecido pela Amazon Web Services (AWS). Eles também conheceram o Amazon Linux, que é uma distribuição otimizada para a nuvem, sendo uma opção excelente para as instâncias EC2. Os membros da banda estão empolgados para testar essa tecnologia e começar a armazenar e gerenciar os seus documentos e arquivos na nuvem. Neste exercício, iremos ajudá-los com isso.
+
+Passos:
+
 1. Configuração da instância EC2
 - acesse o Console da AWS e navegue até o serviço EC2; 
 - crie uma nova instância EC2 usando a imagem Amazon Linux 2; 
@@ -24,3 +29,5 @@ Exercício:
 6. Explorando recursos:
 - use comandos, como ls, df -h, mount e cat, para verificar o status do volume montado, o espaço em disco disponível e o conteúdo do arquivo criado;
 - por fim, tire um print deste último passo e envie para avaliação.
+
+Atenção: após executar o exercício, não se esqueça de interromper ou encerrar a instância criada para não gerar custos adicionais.
